# Flappy-Bird

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
src/: FlappyBirdMain.cpp  FlappyBirdMain.hpp  Graphics.cpp  Graphics.hpp  main.cpp
src/Graphics/: Cords.hpp  Graphics.cpp  Graphics.hpp  Rendering.cpp
